<resources>
	<string name="app_name">KTV</string>
	<string name="version_info">http://www.3ttech.cn version %1$s</string>
	<string name="exit_window_title">"Exit the room? "</string>
	<string name="exit_window_yes">Determine</string>
	<string name="exit_window_cancel">Cancel</string>
	<string name="copyright_info">Copyright © 2019 SanTiCloud. All Rights Reserved</string>
	<string name="ttt_test">test</string>
	<string name="ttt_copy">Copy</string>
	<string name="ttt_adv_setting">Settings</string>
	<string name="ttt_copy_success">Copy successful</string>
	<string name="ttt_cdnpullurl">CDN pull flow address</string>
	<string name="ttt_close_network">Close network display</string>
	<string name="ttt_role">Role</string>
	<string name="ttt_role_broadcaster">Vice Anchor</string>
	<string name="ttt_role_audience">Audience</string>
	<string name="ttt_prefix_channel_name">Room ID</string>
	<string name="ttt_prefix_live_channel_name">Live Room ID</string>
	<string name="ttt_prefix_user_name">User ID</string>
	<string name="permission_write_external_storage">The program needs to cache some data on the SD card, otherwise it cannot run.</string>
	<string name="permission_camera">The program needs to use camera permissions for audio and video calls, otherwise it will not work.</string>
	<string name="permission_record_audio">The program needs recording permission for audio and video calls, otherwise it cannot run.</string>
	<string name="permission_read_phone_state">The program needs phone monitoring permission for audio and video calls, otherwise it cannot run.</string>
	<string name="ttt_role_anchor">Anchor</string>
	<string name="ttt_audio_upspeed">A-%1$skbps\\u2191</string>
	<string name="ttt_audio_downspeed">A-%1$skbps\\u2193</string>
	<string name="ttt_video_upspeed">V-%1$skbps\\u2191</string>
	<string name="ttt_video_downspeed">V-%1$skbps\\u2193</string>
	<string name="ttt_error_enterchannel_unconnect">Unable to connect to the server</string>
	<string name="ttt_error_enterchannel_room_no_exist">The live room does not exist</string>
	<string name="ttt_error_enterchannel_timeout">Timeout, 10 seconds without receiving a server return</string>
	<string name="ttt_error_enterchannel_version">Version error</string>
	<string name="ttt_error_enterchannel_verification_failed">Server verification error</string>
	<string name="ttt_error_enterchannel_unknow">An unknown error occurred while entering the room</string>
	<string name="ttt_error_enterchannel_token_invaild">Invalid token</string>
	<string name="ttt_error_enterchannel_format">Room name does not match the number format</string>
	<string name="ttt_error_exit_relogin">Repeat login</string>
	<string name="ttt_error_exit_noaudio_upload">No uplink audio data for a long time</string>
	<string name="ttt_error_exit_novideo_upload">No uplink video data for a long time</string>
	<string name="ttt_error_exit_other_anchor_enter">Others enter as an anchor</string>
	<string name="ttt_error_exit_push_rtmp_failed">Pushing failed</string>
	<string name="ttt_error_exit_kicked">Kicked by the host</string>
	<string name="ttt_error_exit_anchor_exited">Anchor has exited</string>
	<string name="ttt_confirm">Determine</string>
	<string name="ttt_cannel">Cancel</string>
	<string name="ttt_enter_channel">Entering room</string>
	<string name="ttt_hint_loading_channel">Entering the room&#8230;</string>
	<string name="ttt_hint_linking_channel">Linking#8230;</string>
	<string name="ttt_link_start">Start linking</string>
	<string name="ttt_link_finish">End linking</string>
	<string name="ttt_error_network_disconnected">The network connection is disconnected, please check the network</string>
	<string name="main_item_volume">Volume:%1$s</string>
	<string name="ttt_videoly_speaking">Speaking&#8230;</string>
	<string name="ttt_link_other_author">Other anchor</string>
	<string name="ttt_live_logo_text">3T Lova Multi-MIC Connected Live Broad</string>
	<string name="ttt_error_exit_dialog_title">Exception</string>
	<string name="ttt_error_exit_dialog_prefix_msg">Error Message</string>
	<string name="ttt_error_exit_server_overload">Server overload</string>
	<string name="hint_user_name_limit">please enter user id (id\\\'s number length limit 19)</string>
	<string name="hint_channel_name_limit">please enter room id (id\\\'s number length limit 19)</string>
	<string name="ttt_error_enterchannel_check_member_max">The number of rooms has reached the upper limit</string>
	<string name="ttt_error_enterchannel_check_format">Room ID can only be a number</string>
	<string name="ttt_error_enterchannel_check_owner">The room ID cannot be itself</string>
	<string name="ttt_error_enterchannel_check_userid_empty">User ID cannot be empty</string>
	<string name="ttt_error_enterchannel_check_channel_empty">Room number cannot be empty</string>
	<string name="ttt_error_exit_token_expired">Token has expired</string>
	<string name="ttt_error_link_timeout">Link timeout</string>
	<string name="ttt_error_link_relink">Repeat link</string>
	<string name="ttt_error_link_unknow">An exception error has occurred</string>
	<string name="ttt_error_link_device_noexist">Failed to get user video device</string>
	<string name="ttt_set_audio_high_params">High quality</string>
	<string name="ttt_set_video_params">"Video Profile"</string>
	<string name="ttt_set_resolution_params">"Resolution"</string>
	<string name="ttt_set_bitrate_params">"Bitrate"</string>
	<string name="ttt_set_fps_params">"Frame Rate"</string>
	<string name="ttt_set_audio_params">"Audio Profile"</string>
	<string name="ttt_set_sample_params">"Sample Rate"</string>
	<string name="ttt_set_audio_encode_params">"Encode"</string>
	<string name="ttt_local_setting">Local Setting</string>
	<string name="ttt_push_setting">Push Setting</string>
	<string name="ttt_share">Share</string>
	<string name="ttt_wechat">WeChat</string>
	<string name="ttt_wechat_circle">WeChat Circle</string>
	<string name="ttt_copy_link">Copy Link</string>
	<string name="ttt_ktv_local_user_prefix">自己ID:</string>
	<string name="ttt_ktv_audience">下麦</string>
	<string name="ttt_ktv_broadcast">上麦</string>
	<string name="ttt_ktv_start_play">开始播放</string>
	<string name="ttt_ktv_adjust_music_volume">调节伴奏音量</string>
	<string name="ttt_ktv_adjust_solo_volume">调节人声音量</string>
	<string name="ttt_ktv_exit_room">退出房间</string>
	<string name="ttt_ktv_change_song">切歌</string>
</resources>