<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 android:background="@drawable/login"
											 android:clipToPadding="true"
											 android:fitsSystemWindows="true"
											 tools:layout_editor_absoluteY="25dp">

	<ImageView
		android:id="@+id/imageview1"
		android:layout_width="142dp"
		android:layout_height="27dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="90dp"
		android:src="@drawable/logo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:text="@string/ttt_role"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		app:layout_constraintStart_toStartOf="@+id/splash_roomid_tv"
		app:layout_constraintTop_toBottomOf="@+id/imageview1"/>

	<RadioButton
		android:id="@+id/splash_role_author"
		android:layout_width="76dp"
		android:layout_height="30dp"
		android:layout_marginTop="24dp"
		android:background="@drawable/login_select_role"
		android:button="@null"
		android:checked="true"
		android:gravity="center"
		android:onClick="onClickRoleButton"
		android:text="@string/ttt_role_anchor"
		android:textColor="@color/role_color"
		android:textSize="12sp"
		app:layout_constraintStart_toStartOf="@+id/splash_roomid_tv"
		app:layout_constraintTop_toBottomOf="@+id/textView"/>

	<RadioButton
		android:id="@+id/splash_role_audience"
		android:layout_width="76dp"
		android:layout_height="30dp"
		android:background="@drawable/login_select_role"
		android:button="@null"
		android:gravity="center"
		android:onClick="onClickRoleButton"
		android:text="@string/ttt_role_audience"
		android:textColor="@color/role_color"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="@+id/splash_roomid"
		app:layout_constraintTop_toTopOf="@+id/splash_role_author"/>

	<TextView
		android:id="@+id/splash_roomid_tv"
		android:layout_width="wrap_content"
		android:layout_height="33dp"
		android:gravity="right|center_vertical"
		android:singleLine="true"
		android:text="@string/ttt_prefix_channel_name"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="@+id/splash_roomid"
		app:layout_constraintEnd_toStartOf="@+id/splash_roomid"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/splash_roomid"/>

	<EditText
		android:id="@+id/splash_roomid"
		android:layout_width="205dp"
		android:layout_height="33dp"
		android:layout_marginStart="12dp"
		android:layout_marginTop="43dp"
		android:background="@drawable/login_edit"
		android:ems="10"
		android:hint="@string/hint_channel_name_limit"
		android:inputType="number"
		android:paddingLeft="12dp"
		android:textColor="#0FFFF1"
		android:textSize="12sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/splash_roomid_tv"
		app:layout_constraintTop_toBottomOf="@+id/splash_role_audience"/>

	<Button
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/login_enter"
		android:onClick="onClickEnterButton"
		android:text="@string/ttt_enter_channel"
		android:textColor="#FFFFFF"
		app:layout_constraintBottom_toTopOf="@+id/textview1"
		app:layout_constraintEnd_toEndOf="@+id/splash_roomid"
		app:layout_constraintStart_toStartOf="@+id/splash_roomid_tv"
		app:layout_constraintTop_toBottomOf="@+id/splash_roomid"
		app:layout_constraintVertical_bias="0.6"/>

	<TextView
		android:id="@+id/textview1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/app_name"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		android:visibility="visible"
		app:layout_constraintBottom_toTopOf="@+id/splash_version"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<TextView
		android:id="@+id/splash_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:gravity="center"
		android:text="@string/version_info"
		android:textColor="#FFFFFF"
		android:textSize="10sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<Button
		android:layout_width="76dp"
		android:layout_height="33dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/login_enter"
		android:onClick="onTestButtonClick"
		android:text="@string/ttt_test"
		android:textColor="#FFFFFF"
		android:visibility="invisible"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>
